# MyRHI

./: .gitignore  CMakeLists.txt
include/mrhi/: MDirectXDevice.h
src/: MDirectXDevice.cpp  mrhi.cpp
